--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://impulse30/github.io/deploy-github",
+  "homepage": "https://github.com/impulse30/quiz4.git",
   "name": "quiz",
   "private": true,
   "version": "0.0.0",
